--- a/infrastructure/docker/services/php/Dockerfile
+++ b/infrastructure/docker/services/php/Dockerfile
@@ -1,6 +1,6 @@
 # hadolint global ignore=DL3008
 
-FROM debian:11.7-slim as php-base
+FROM debian:12.6-slim AS php-base
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
@@ -9,13 +9,15 @@ RUN apt-get update \
         curl \
         ca-certificates \
         gnupg \
-    && curl -s https://packages.sury.org/php/apt.gpg | gpg --dearmor > /usr/share/keyrings/deb.sury.org-php.gpg \
-    && echo "deb [signed-by=/usr/share/keyrings/deb.sury.org-php.gpg] https://packages.sury.org/php bullseye main" > /etc/apt/sources.list.d/sury.list \
+    && curl -sSLo /tmp/debsuryorg-archive-keyring.deb https://packages.sury.org/debsuryorg-archive-keyring.deb \
+    && dpkg -i /tmp/debsuryorg-archive-keyring.deb \
+    && echo "deb [signed-by=/usr/share/keyrings/deb.sury.org-php.gpg] https://packages.sury.org/php bookworm main" > /etc/apt/sources.list.d/sury.list \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
+        bash-completion \
         procps \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
@@ -44,17 +46,20 @@ ARG USER_ID
 COPY entrypoint /
 RUN addgroup --gid $USER_ID app && \
     adduser --system --uid $USER_ID --home /home/app --shell /bin/bash app && \
-    curl -Ls https://github.com/tianon/gosu/releases/download/1.16/gosu-amd64 | \
+    curl -Ls https://github.com/tianon/gosu/releases/download/1.17/gosu-amd64 | \
         install /dev/stdin /usr/local/bin/gosu && \
     sed "s/{{ application_user }}/app/g" -i /entrypoint
 
 # Configuration
 COPY base/php-configuration /etc/php/${PHP_VERSION}
 
-WORKDIR /home/app/application
+ENV PHP_VERSION=${PHP_VERSION}
+
+WORKDIR /var/www
+
 ENTRYPOINT [ "/entrypoint" ]
 
-FROM php-base as frontend
+FROM php-base AS frontend
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
@@ -83,15 +88,15 @@ EXPOSE 80
 
 CMD ["runsvdir", "-P", "/etc/service"]
 
-FROM php-base as worker
+FROM php-base AS worker
 
-FROM php-base as builder
+FROM php-base AS builder
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-ARG NODEJS_VERSION=18.x
-RUN curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | gpg --dearmor > /usr/share/keyrings/nodesource.gpg \
-    && echo "deb [signed-by=/usr/share/keyrings/nodesource.gpg] https://deb.nodesource.com/node_${NODEJS_VERSION} bullseye main" > /etc/apt/sources.list.d/nodejs.list
+ARG NODEJS_VERSION=20.x
+RUN curl -s https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /usr/share/keyrings/nodesource.gpg \
+    && echo "deb [signed-by=/usr/share/keyrings/nodesource.gpg] https://deb.nodesource.com/node_${NODEJS_VERSION} nodistro main" > /etc/apt/sources.list.d/nodesource.list
 
 # Default toys
 RUN apt-get update \
@@ -115,9 +120,32 @@ RUN adduser app sudo \
     && phpenmod app-builder
 
 # Composer
-COPY --from=composer/composer:2.5.8 /usr/bin/composer /usr/bin/composer
+COPY --from=composer/composer:2.7.7 /usr/bin/composer /usr/bin/composer
 RUN mkdir -p "/home/app/.composer/cache" \
     && chown app: /home/app/.composer -R
 
+ADD https://raw.githubusercontent.com/symfony/symfony/refs/heads/7.2/src/Symfony/Component/Console/Resources/completion.bash /tmp/completion.bash
+
+# Composer symfony/console version is too old, and doest not support "API version feature", so we remove it
+# Hey, while we are at it, let's add some more completion
+RUN sed /tmp/completion.bash \
+        -e "s/{{ COMMAND_NAME }}/composer/g" \
+        -e 's/"-a{{ VERSION }}"//g' \
+        -e "s/{{ VERSION }}/1/g"  \
+        > /etc/bash_completion.d/composer \
+    && sed /tmp/completion.bash \
+        -e "s/{{ COMMAND_NAME }}/console/g" \
+        -e "s/{{ VERSION }}/1/g"  \
+        > /etc/bash_completion.d/console
+
 # Third party tools
-ENV PATH="$PATH:/home/app/application/tools/bin"
+ENV PATH="$PATH:/var/www/tools/bin"
+
+# Good default customization
+RUN cat >> /etc/bash.bashrc <<EOF
+. /etc/bash_completion
+
+PS1='\[\e[01;33m\]\u \[\e[00;32m\]\w\[\e[0m\] '
+EOF
+
+WORKDIR /var/www
