--- a/infrastructure/docker/services/php/frontend/etc/apache2/sites-available/000-default.conf
+++ b/infrastructure/docker/services/php/frontend/etc/apache2/sites-available/000-default.conf
@@ -2,7 +2,7 @@ ServerName localhost
 
 <VirtualHost *:80>
 
-    DocumentRoot /home/app/application/public
+    DocumentRoot /var/www/public
 
     <FilesMatch "\.(jpg|jpeg|png|gif|ico|css|js|svg)$">
         FileETag None
@@ -21,7 +21,7 @@ ServerName localhost
     <Proxy "fcgi://localhost/" enablereuse=on max=10>
     </Proxy>
 
-    <Directory /home/app/application/public/>
+    <Directory /var/www/public/>
         Require all granted
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
