--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,9 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - name: Setup PHP
-              uses: shivammathur/setup-php@v2
-              with:
-                  php-version: 8.1
-                  tools: jolicode/castor
+            -
+              name: Setup PHP
+              uses: castor-php/setup-castor@v0.1.0
 
             - name: "Build and start the infrastructure"
               run: "castor start && sleep 5"
