--- a/infrastructure/docker/docker-compose.builder.yml
+++ b/infrastructure/docker/docker-compose.builder.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 volumes:
     builder-data: {}
 
@@ -8,6 +6,7 @@ services:
         build:
             context: services/php
             target: builder
+        init: true
         depends_on:
             - redis
         environment:
@@ -21,6 +20,8 @@ services:
             - BUILD_NUMBER # Jenkins, TeamCity
             - RUN_ID # TaskCluster, dsari
         volumes:
-            - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
-            - "${COMPOSER_CACHE_DIR}:/home/app/.composer/cache"
             - "builder-data:/home/app"
+            - "${COMPOSER_CACHE_DIR}:/home/app/.composer/cache"
+            - "../..:/var/www:cached"
+        profiles:
+            - default
