--- a/infrastructure/docker/services/router/Dockerfile
+++ b/infrastructure/docker/services/router/Dockerfile
@@ -1,5 +1,8 @@
-FROM traefik:v2.7
+FROM traefik:v3.1
 
 COPY traefik /etc/traefik
+
+ARG PROJECT_NAME
+RUN sed -i "s/{{ PROJECT_NAME }}/${PROJECT_NAME}/g" /etc/traefik/traefik.yaml
 
 VOLUME [ "/etc/ssl/certs" ]
