--- a/composer.json
+++ b/composer.json
@@ -20,38 +20,44 @@
     },
     "require": {
         "php": "^8.3",
-        "adam-paterson/oauth2-slack": "^1.1",
-        "bugsnag/bugsnag-symfony": "^1.10",
-        "doctrine/annotations": "^1.13",
-        "jolicode/slack-php-api": "^4.5",
-        "nelmio/security-bundle": "^3.0",
-        "nyholm/psr7": "^1.5",
-        "predis/predis": "^2.0",
-        "restcord/restcord": "dev-develop",
-        "symfony/asset": "*",
-        "symfony/console": "*",
-        "symfony/flex": "^2.2",
-        "symfony/form": "*",
-        "symfony/framework-bundle": "*",
-        "symfony/http-client": "*",
-        "symfony/monolog-bundle": "^3.8",
-        "symfony/runtime": "*",
-        "symfony/twig-bundle": "*",
-        "symfony/validator": "*",
-        "symfony/yaml": "*",
-        "twig/twig": "^3.4",
-        "wohali/oauth2-discord-new": "^1.1"
+        "adam-paterson/oauth2-slack": "^1.1.3",
+        "bugsnag/bugsnag-symfony": "^1.14.2",
+        "doctrine/annotations": "^1.14.4",
+        "jolicode/slack-php-api": "^4.7.1",
+        "nelmio/security-bundle": "^3.4.2",
+        "nyholm/psr7": "^1.8.2",
+        "predis/predis": "^2.2.2",
+        "restcord/restcord": "dev-feature/update-sf",
+        "symfony/asset": ">=7.1.1",
+        "symfony/console": ">=7.1.5",
+        "symfony/flex": "^2.4.7",
+        "symfony/form": ">=7.1.5",
+        "symfony/framework-bundle": ">=7.1.5",
+        "symfony/http-client": ">=7.1.5",
+        "symfony/monolog-bundle": "^3.10",
+        "symfony/runtime": ">=7.1.1",
+        "symfony/twig-bundle": ">=7.1.5",
+        "symfony/validator": ">=7.1.5",
+        "symfony/yaml": ">=7.1.5",
+        "twig/twig": "^3.14",
+        "wohali/oauth2-discord-new": "^1.2.1"
     },
     "require-dev": {
-        "symfony/browser-kit": "*",
-        "symfony/css-selector": "*",
-        "symfony/debug-bundle": "*",
-        "symfony/dotenv": "*",
-        "symfony/maker-bundle": "^1.47",
-        "symfony/phpunit-bridge": "*",
-        "symfony/stopwatch": "*",
-        "symfony/var-dumper": "*",
-        "symfony/web-profiler-bundle": "*"
+        "symfony/browser-kit": ">=7.1.1",
+        "symfony/css-selector": ">=7.1.1",
+        "symfony/debug-bundle": ">=7.1.1",
+        "symfony/dotenv": ">=7.1.5",
+        "symfony/maker-bundle": "^1.61",
+        "symfony/phpunit-bridge": ">=7.1.4",
+        "symfony/stopwatch": ">=7.1.1",
+        "symfony/var-dumper": ">=7.1.5",
+        "symfony/web-profiler-bundle": ">=7.1.4"
+    },
+    "repositories": {
+        "jewome62_restcord": {
+            "type": "vcs",
+            "url": "git@github.com:jewome62/restcord.git"
+        }
     },
     "config": {
         "optimize-autoloader": true,
