--- a/infrastructure/docker/services/php/base/php-configuration/mods-available/app-default.ini
+++ b/infrastructure/docker/services/php/base/php-configuration/mods-available/app-default.ini
@@ -12,6 +12,7 @@ max_execution_time = 0
 always_populate_raw_post_data = -1
 upload_max_filesize = 20M
 post_max_size = 20M
+max_input_vars = 10000
 [Date]
 date.timezone = UTC
 [Phar]
