Install Symfony 7.4 RC

--- a/composer.json
+++ b/composer.json
@@ -96,7 +96,8 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.3.*"
+            "require": "7.4.*"
         }
-    }
+    },
+    "minimum-stability": "RC"
 }
