Update bugsnag recipe

--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "7.4.*"
         }
     },
