Update symfony/routing recipe

--- a/.env
+++ b/.env
@@ -38,3 +38,9 @@ APP_ENV=dev
 APP_SECRET=98d174d70d76f824a2a601b715cbc53b
 APP_SHARE_DIR=var/share
 ###< symfony/framework-bundle ###
+
+###> symfony/routing ###
+# Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
+# See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
+DEFAULT_URI=http://localhost
+###< symfony/routing ###
