Upgrade PHPUnit to version 12, remove the bridge o_O

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache/
+###< phpunit/phpunit ###
