--- a/.env
+++ b/.env
@@ -36,4 +36,11 @@ TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=98d174d70d76f824a2a601b715cbc53b
+APP_SHARE_DIR=var/share
 ###< symfony/framework-bundle ###
+
+###> symfony/routing ###
+# Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
+# See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
+DEFAULT_URI=http://localhost
+###< symfony/routing ###
