Update Bugsnag configuration to discard specific exceptions

--- a/config/packages/bugsnag.yaml
+++ b/config/packages/bugsnag.yaml
@@ -5,6 +5,10 @@ bugsnag:
     notify_release_stages:
         - production
         #- development
+    discard_classes:
+        - Symfony\Component\HttpKernel\Exception\HttpException\RedirectException
+        - Symfony\Component\HttpKernel\Exception\NotFoundHttpException
+        - Symfony\Component\Security\Core\Exception\AccessDeniedException
 
 services:
     Bugsnag\Client:
