--- a/composer.json
+++ b/composer.json
@@ -21,38 +21,38 @@
     "require": {
         "php": "^8.4",
         "adam-paterson/oauth2-slack": "^1.1.3",
-        "bugsnag/bugsnag-symfony": "dev-symfony8",
-        "jolicode/slack-php-api": "^4.7.1",
-        "nelmio/security-bundle": "dev-symfony8",
-        "predis/predis": "^2.2.2",
-        "symfony/asset": "*",
-        "symfony/console": "*",
-        "symfony/flex": "*",
-        "symfony/form": "*",
-        "symfony/framework-bundle": "*",
-        "symfony/http-client": "*",
-        "symfony/mime": "*",
-        "symfony/monolog-bundle": "^4.0",
-        "symfony/runtime": "*",
-        "symfony/twig-bundle": "*",
-        "symfony/validator": "*",
-        "symfony/yaml": "*",
-        "twig/twig": "^3.22",
+        "bugsnag/bugsnag-symfony": "^2.0.0",
+        "jolicode/slack-php-api": "^4.8.0",
+        "nelmio/security-bundle": "^3.8.0",
+        "predis/predis": "^2.4.1",
+        "symfony/asset": ">=8",
+        "symfony/console": ">=8.0.3",
+        "symfony/flex": ">=2.10",
+        "symfony/form": ">=8.0.3",
+        "symfony/framework-bundle": ">=8.0.3",
+        "symfony/http-client": ">=8.0.3",
+        "symfony/mime": ">=8",
+        "symfony/monolog-bundle": "^4.0.1",
+        "symfony/runtime": ">=8.0.1",
+        "symfony/twig-bundle": ">=8.0.3",
+        "symfony/validator": ">=8.0.3",
+        "symfony/yaml": ">=8.0.1",
+        "twig/twig": "^3.22.2",
         "wohali/oauth2-discord-new": "^1.2.1",
-        "phpspec/phpspec": "dev-sf8 as 8.0.0",
-        "jane-php/jane-php": "dev-sf8 as v7.9.0",
-        "php-http/client-common": "dev-sf8 as v2.7.0"
+        "phpspec/phpspec": "^8.1.0",
+        "jane-php/jane-php": "^7.10.3",
+        "php-http/client-common": "^2.7.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^12.4",
-        "symfony/browser-kit": "*",
-        "symfony/css-selector": "*",
-        "symfony/debug-bundle": "*",
-        "symfony/dotenv": "*",
-        "symfony/maker-bundle": "*",
-        "symfony/stopwatch": "*",
-        "symfony/var-dumper": "*",
-        "symfony/web-profiler-bundle": "*"
+        "phpunit/phpunit": "^12.5.6",
+        "symfony/browser-kit": ">=8.0.3",
+        "symfony/css-selector": ">=8",
+        "symfony/debug-bundle": ">=8",
+        "symfony/dotenv": ">=8",
+        "symfony/maker-bundle": ">=1.65.1",
+        "symfony/stopwatch": ">=8",
+        "symfony/var-dumper": ">=8.0.3",
+        "symfony/web-profiler-bundle": ">=8.0.3"
     },
     "config": {
         "optimize-autoloader": true,
@@ -101,26 +101,5 @@
         }
     },
     "minimum-stability": "stable",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/damienalexandre/bugsnag-symfony"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/damienalexandre/NelmioSecurityBundle"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/VincentLanglet/phpspec"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/VincentLanglet/janephp"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/VincentLanglet/client-common"
-        }
-    ]
+    "repositories": []
 }
